<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jxnflzc.firststudy.MainActivity">

    <Button
        android:id="@+id/btn_first_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_first_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_second_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_second_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_third_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_third_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_first_day" />

    <Button
        android:id="@+id/btn_forth_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_forth_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_second_day" />
</android.support.constraint.ConstraintLayout>
